--- a/index.html
+++ b/index.html
@@ -1,69 +1,75 @@
-<!DOCTYPE html>
-<html lang="en">
+# Emenetu Haileselassie
+            206 403-0847 | emenetu@uw.edu
+# Education
+University of Washington – Seattle, WA
+Expected Graduation: June 2021
+Major: Geographic Data Science
 
-<head>
+#### Related Coursework:
+Computer Programing I and II, Elements of Statistical Methods, Quantitative Methods in Geography, Introduction to Machine Learning, Advanced Digital Geographies, Coastal Geographic Information Systems, GIS Database and Programming, GIS Data Management, GIS and Mapping
 
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
+## Work Experience
 
-  <title>The Big Picture - Start Bootstrap Template</title>
+### Amazon (Seattle, Washington)
 
-  <!-- Bootstrap core CSS -->
-  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+Data Analyst Intern
+Amazon   – Seattle, WA
+June 2020-September 2020
+•	Analyzed confidential visual data with data scientists to provide input for research
+•	Performed root cause analysis to understand data biases and continually improve analytical tools
+•	Examined data using A/B testing to improve data quality and output
+•	Assisted in creating standard operation procedures as part of an organization that was developing new processes
 
-  <!-- Custom styles for this template -->
-  <link href="css/the-big-picture.css" rel="stylesheet">
+### University Of Washington (Seattle, Washington)
+University of Washington Black Student Commission Intern
+September 2019 – June 2020
+•	Planned events to celebrate and educate the UW community on the black student experience
+•	Collaborated with black student organizations and faculty to plan graduation ceremony for the black student body
+•	Worked with a team of interns on several different projects throughout the year
 
-</head>
+### Big's Mobile Detailing  (Edmonds, Washington)
+Social Media Intern
+June 2019 - September 2019
+●	Managed the company’s social media accounts and posted content on platform such as Facebook, Instagram, and Twitter
+●	Engaged with customers or clients and provided service and or/ sales
+●	Tracked social media engagement to identify high-preforming ideas and campaigns for scalability
 
-<body>
+## Leadership and Professional Development
+St. Gebriel Ethiopian Orthodox Church Youth Program Coordinator
+July 2014 - Present
+•	Coordinated afterschool activities and field trips for twenty children from grades K-8.
+•	“Big guy/little guy mentorship”, recently created this mentorship opportunity for children to be partnered with young adults.
 
-  <!-- Navigation -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-bottom">
-    <div class="container">
-      <a class="navbar-brand" href="#">Start Bootstrap</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarResponsive">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="#">Home
-              <span class="sr-only">(current)</span>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Services</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Contact</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
+#### Young Executive of Color
+Mentor
+September 2018 - June 2019
+•	Mentored 11 high school students throughout their high school careers
+•	Planned college preparation, financial literacy, professional and personal development workshops for 197 high school students
+•	Created lectures and activates centered around different aspects of Business including Marketing, Finance, Accounting, etc.
 
-  <!-- Page Content -->
-  <section>
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-6">
-          <h1 class="mt-5">The Big Picture</h1>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt voluptates rerum eveniet sapiente repellat esse, doloremque quod recusandae deleniti nostrum assumenda vel beatae sed aut modi nesciunt porro quisquam voluptatem.</p>
-        </div>
-      </div>
-    </div>
-  </section>
+#### Management Leadership For Tomorrow (MLT)
+Career Prep Fellow
+May 2018 – September 2019
+•	Selected as one of 250 participants for an 18-month professional development program for high-achieving diverse talent.
+•	Completed business case studies and projects to hone analytical, quantitative and communication skills.
+•	Participated in four professional development conferences hosted by industry leaders, such as Deloitte, Google, and Nike
 
-  <!-- Bootstrap core JavaScript -->
-  <script src="vendor/jquery/jquery.min.js"></script>
-  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+#### National Society of Black Engineers
+Finance Chair – Region 6
+September 2017- September 2018
+•	Managed the entire budget for the University of Washington chapter of NSBE
+•	Increased member attendance by 20% through promotion efforts throughout campus such as tabling at fairs, running social media platforms, as well as being a NSBE representative at other black organization meetings
+•	Served as mentor to freshman & sophomores in efforts to ease the transition to college
+Skills
 
-</body>
+#### Skills:
+Teamwork, Leadership, Communication, Negotiation, Customer Service, Time Management, Data Analysis, Data Visualization, Data Management, Machine Learning, Advanced Statistics and Probability
+#### Computer:
+ Microsoft Office, Java, SQL, Adobe Creative Suite, Mapbox, ArcGIS, ESRI, QGIS
+Languages: Amharic, Tigrinya, and English
 
-</html>
+
+[University 1]: http://www.univ1.edu
+[University 2]: http://www.univ2.edu
+[University 3]: http://www.univ3.edu
+```
