--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
-# Emenetu Haileselassie
+Emenetu Haileselassie
             206 403-0847 | emenetu@uw.edu
-# Education
+Education
 University of Washington – Seattle, WA
 Expected Graduation: June 2021
 Major: Geographic Data Science
