--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 Emenetu Haileselassie
-            206 403-0847 | emenetu@uw.edu
+206 403-0847 | emenetu@uw.edu
 Education
 University of Washington – Seattle, WA
 Expected Graduation: June 2021
 Major: Geographic Data Science
 
-#### Related Coursework:
+Related Coursework:
 Computer Programing I and II, Elements of Statistical Methods, Quantitative Methods in Geography, Introduction to Machine Learning, Advanced Digital Geographies, Coastal Geographic Information Systems, GIS Database and Programming, GIS Data Management, GIS and Mapping
 
-## Work Experience
+Work Experience
 
-### Amazon (Seattle, Washington)
+Amazon (Seattle, Washington)
 
 Data Analyst Intern
 Amazon   – Seattle, WA
@@ -20,41 +20,41 @@ June 2020-September 2020
 •	Examined data using A/B testing to improve data quality and output
 •	Assisted in creating standard operation procedures as part of an organization that was developing new processes
 
-### University Of Washington (Seattle, Washington)
+University Of Washington (Seattle, Washington)
 University of Washington Black Student Commission Intern
 September 2019 – June 2020
 •	Planned events to celebrate and educate the UW community on the black student experience
 •	Collaborated with black student organizations and faculty to plan graduation ceremony for the black student body
 •	Worked with a team of interns on several different projects throughout the year
 
-### Big's Mobile Detailing  (Edmonds, Washington)
+Big's Mobile Detailing  (Edmonds, Washington)
 Social Media Intern
 June 2019 - September 2019
 ●	Managed the company’s social media accounts and posted content on platform such as Facebook, Instagram, and Twitter
 ●	Engaged with customers or clients and provided service and or/ sales
 ●	Tracked social media engagement to identify high-preforming ideas and campaigns for scalability
 
-## Leadership and Professional Development
+Leadership and Professional Development
 St. Gebriel Ethiopian Orthodox Church Youth Program Coordinator
 July 2014 - Present
 •	Coordinated afterschool activities and field trips for twenty children from grades K-8.
 •	“Big guy/little guy mentorship”, recently created this mentorship opportunity for children to be partnered with young adults.
 
-#### Young Executive of Color
+Young Executive of Color
 Mentor
 September 2018 - June 2019
 •	Mentored 11 high school students throughout their high school careers
 •	Planned college preparation, financial literacy, professional and personal development workshops for 197 high school students
 •	Created lectures and activates centered around different aspects of Business including Marketing, Finance, Accounting, etc.
 
-#### Management Leadership For Tomorrow (MLT)
+Management Leadership For Tomorrow (MLT)
 Career Prep Fellow
 May 2018 – September 2019
 •	Selected as one of 250 participants for an 18-month professional development program for high-achieving diverse talent.
 •	Completed business case studies and projects to hone analytical, quantitative and communication skills.
 •	Participated in four professional development conferences hosted by industry leaders, such as Deloitte, Google, and Nike
 
-#### National Society of Black Engineers
+National Society of Black Engineers
 Finance Chair – Region 6
 September 2017- September 2018
 •	Managed the entire budget for the University of Washington chapter of NSBE
@@ -62,9 +62,9 @@ September 2017- September 2018
 •	Served as mentor to freshman & sophomores in efforts to ease the transition to college
 Skills
 
-#### Skills:
+Skills:
 Teamwork, Leadership, Communication, Negotiation, Customer Service, Time Management, Data Analysis, Data Visualization, Data Management, Machine Learning, Advanced Statistics and Probability
-#### Computer:
+Computer:
  Microsoft Office, Java, SQL, Adobe Creative Suite, Mapbox, ArcGIS, ESRI, QGIS
 Languages: Amharic, Tigrinya, and English
 
